fix taskOptions spacing after click on todo options

--- a/src/components/Options.css
+++ b/src/components/Options.css
@@ -8,7 +8,7 @@
 }
 
 .iconMore{
-    height: 30px;
+    height: 100%;
     width: 35px;
     display: flex;
     justify-content: center;
@@ -18,21 +18,20 @@
 }
 
 .taskOptions{
+    margin-left: 30px;
+    margin-top: 200px;
     display: flex;
+    position: absolute;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     border-radius: 16px;
     z-index: 9999;
-    position: absolute;
-    top: 55px;
-    right: -150px;
     width: 240px;
     height: 150px;
     background-color: #fbfbfbb0;
     backdrop-filter: blur(3px);
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
-
     animation-duration: 0.3s;
     animation-name: slidein;
 }
